# internal/xkapustaj_wl/model_hospital.go
@@ -1,0 +1,26 @@
+/*
+ * Waiting List Api
+ *
+ * Hospital Employee List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: kapusta.jergus@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package xkapustaj_wl
+
+type Hospital struct {
+
+	// Unique identifier of the hospital
+	Id string `json:"id"`
+
+	// Human readable display name of the ambulance
+	Name string `json:"name"`
+
+	Address string `json:"address"`
+
+	Employees []EmployeeListEntry `json:"employees,omitempty"`
+
+	Timesheets []Timesheet `json:"timesheets,omitempty"`
+}
